# stellar-app-os

./: .env.example  .gitignore  ASSUMPTIONS.md  COMMIT_MESSAGE.txt  CONTRACTS.md  CONTRIBUTING.md  IMPLEMENTATION_SUMMARY.md  PR_DEPLOY_SCRIPTS_504.md  PR_PLANTER_BLACKLIST_505.md  PR_PLANTER_REGISTRY_475.md  PR_PLATFORM_FEE_467.md  PR_SHARED_TYPES_502.md  PR_SPONSOR_NFT_RECEIPT_471.md  README.md  TESTING.md  TEST_CHECKLIST.md  add impact metric reporting by project owners  clean_tests.py  docker-compose.monitoring.yml  final_fixes.py  fix_all.py  fix_amounts.py  fix_carbon_marketplace.py  fix_errors.py  fix_escrow.py  fix_test_fails.py  fix_tests.py  fix_tests2.py  fix_tree_registry.py  fix_tree_token.py  middleware.ts  next.config.ts  package-lock.json  package.json  patch_contracts.py  patch_escrow_milestone.py  pnpm-lock.yaml  proxy.ts  resolve_escrow.py  resolve_merge.py  (+6 more)
contracts/: Cargo.toml  deny.toml  full-flow-test.rs  integration_tests.rs
contracts/admin-controls/: Cargo.toml  deny.toml
contracts/admin-controls/src/: lib.rs
contracts/aggregate-impact-verifier/src/: lib.rs
contracts/carbon-credits/: Cargo.toml
contracts/carbon-credits/src/: lib.rs
contracts/carbon-marketplace/: Cargo.toml
contracts/carbon-marketplace/src/: lib.rs
contracts/donation-escrow/src/: lib.rs
contracts/escrow/: Cargo.toml
contracts/escrow-milestone/src/: lib.rs
contracts/escrow-milestone/test_snapshots/tests/: test_deposit_zero_rejected.1.json  test_double_verify_milestone_rejected.1.json  test_duplicate_deposit_rejected.1.json  test_full_lifecycle_with_balances.1.json  test_initialize_twice_rejected.1.json  test_partial_releases.1.json  (+10 more)
contracts/escrow/src/: lib.rs
contracts/farmer-registry/: Cargo.toml
contracts/farmer-registry/src/: lib.rs
contracts/harvesta-errors/src/: lib.rs
contracts/kyc-attestation/src/: lib.rs
contracts/location-proof/src/: lib.rs
contracts/naira-payout/src/: lib.rs
contracts/nft-certificate/: Cargo.toml
contracts/nft-certificate/src/: lib.rs
contracts/nullifier-registry/src/: lib.rs
contracts/planter-blacklist/: Cargo.toml
contracts/planter-blacklist/src/: lib.rs
contracts/planter-registry/: Cargo.toml
contracts/planter-registry/src/: lib.rs
contracts/planting-bond/: Cargo.toml
contracts/planting-bond/src/: lib.rs
contracts/platform-governance/: Cargo.toml  README.md
contracts/platform-governance/src/: lib.rs
contracts/shared/: Cargo.toml
contracts/shared/src/: constants.rs  lib.rs  storage.rs  types.rs
contracts/species-registry/src/: lib.rs
contracts/species-voting/src/: lib.rs
contracts/sponsor-receipt/: Cargo.toml
contracts/sponsor-receipt/src/: lib.rs
contracts/subscription-sponsorship/src/: lib.rs
contracts/treasury/src/: lib.rs
contracts/tree-escrow/: Cargo.toml  patch_tree_escrow.py
contracts/tree-escrow/src/: lib.rs
contracts/tree-registry/: Cargo.toml
contracts/tree-registry/src/: lib.rs
contracts/tree-token/src/: lib.rs
contracts/verifier-staking/src/: lib.rs
contracts/zk-location-verifier/src/: lib.rs
contracts/zk-verifier/src/: groth16.rs  lib.rs
(+300 files in other folders)
