[workspace]
members = [
    "contract-utils",
    "carbon-marketplace",
    "escrow",
    "nullifier-registry",
    "escrow-milestone",
    "tree-escrow",
    "farmer-registry",
    "donation-escrow",
    "zk-location-verifier",
    "zk-verifier",
    "location-proof",
    "naira-payout",
    "harvesta-errors",
    "aggregate-impact-verifier",
    "tree-token",
    "treasury",
    "admin-controls",
    "kyc-attestation",
    "species-registry",
    "species-voting",
    "subscription-sponsorship",
    "verifier-staking",
]
resolver = "2"

[profile.release]
overflow-checks = true
lto = true
codegen-units = 1
panic = "abort"
