[workspace]
members = [
    "contract-utils",
    "shared",
    "planter-registry",
    "planter-blacklist",
    "escrow",
    "nullifier-registry",
    "escrow-milestone",
    "tree-escrow",
    "farmer-registry",
    "donation-escrow",
    "zk-location-verifier",
    "zk-verifier",
    "location-proof",
    "naira-payout",
    "harvesta-errors",
    "aggregate-impact-verifier",
    "tree-token",
    "treasury",
    "admin-controls",
    "carbon-credits",
    "kyc-attestation",
    "species-registry",
    "species-voting",
    "platform-governance",
    "subscription-sponsorship",
    "nft-certificate",
    "sponsor-receipt",
    "carbon-marketplace",
    "tree-registry",
    "verifier-staking",
]
resolver = "2"

[profile.release]
overflow-checks = true
lto = true
codegen-units = 1
panic = "abort"
