[package]
name = "shared"
version = "0.1.0"
edition = "2021"
description = "Common types shared across FarmCredit Soroban contracts (constants, Option wrappers, storage helpers)"

[lib]
crate-type = ["rlib"]

[dependencies]
soroban-sdk = { version = "21.7.7", default-features = false, features = ["alloc"] }
